--- a/index.html
+++ b/index.html
@@ -4,13 +4,36 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Local Storage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <h1 class="text-center m-4">Local Storage</h1>
+    <hr/>
+    <h1 class="text-center m-4">Demo</h1>
+    <div class="container border border-3 p-3">
+        <div class="row text-center">
+            <div class="col-lg-4 col-md-4 col-sm-4 ">
+                <button class="m-2" id="button1">Add Name in Storage</button>
+            </div>
+
+            <div class="col-lg-4 col-md-4 col-sm-4">
+                <button class="m-2" id="button2">Print Name for  Storage</button>
+            </div>
+
+            <div class="col-lg-4 col-md-4 col-sm-4">
+                <button class="m-2" id="button3">Delete Name for Storage</button>
+            </div>
+        </div>
+    </div>
+    <br><br>
+
+
+    <div class="container border border-3 p-5 text-center " >
+        <p id="result"></p>
+    </div>
     <!--Bootstrap js  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
